@@ -1,5 +1,5 @@
-Sources = ['Oxygen', 'CM10']
-URL = ['repo init -u git://github.com/popdog123/android_manifest.git -b gingerbread', 'repo init -u git://github.com/LG-Android-Coding/android.git -b jellybean']
+Sources = ['Oxygen', 'Oxygen-ICS', 'CM10']
+URL = ['repo init -u git://github.com/popdog123/android_manifest.git -b gingerbread', 'repo init -u git://github.com/popdog123/android_manifest.git -b ics', 'repo init -u git://github.com/LG-Android-Coding/android.git -b jellybean']
 
 # To add a new source, use this: (w/o the # )
 #
